fix: adjust list class appointments
